<resources>
    <string name="app_name">Irrigationsystem</string>

    <string name="buttonReconnect_string">Try again</string>
    <string name="buttonAction_string">Water now</string>
    <string name="floatingActionButton_contentDescription">New plan</string>

    <string name="create_a_new_plan">Create a new plan</string>
    <string name="plan_name_hint">Plan name</string>

    <string name="monday_label">MO</string>
    <string name="tuesday_label">TU</string>
    <string name="wednesday_label">WE</string>
    <string name="thursday_label">TH</string>
    <string name="friday_label">FR</string>
    <string name="saturday_label">SA</string>
    <string name="sunday_label">SU</string>


    <string name="dialog_title">Success</string>
    <string name="dialog_text">You have created a new plan</string>
    <string name="dialog_button_neutral_text">Back to main page</string>

    <string name="watering_dialog_title">Watering confirmation</string>
    <string name="watering_dialog_text">Confirm watering procedure</string>
    <string name="watering_dialog_positive_button_label">Do it!</string>
    <string name="watering_dialog_negative_button_label">Abort</string>

    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="enter">Enter</string>

    <string name="current_plan_name">Current plan name</string>
    <string name="scheduled_days">Scheduled days</string>
    <string name="scheduled_time">Scheduled time</string>
    <string name="input_data">Input data</string>
    <string name="configure_parameters">Configure parameters</string>
    <string name="watering_at">Watering at</string>
    <string name="city">City</string>
    <string name="edit_basic_setup">Edit basic setup</string>
    <string name="select_plan">Select plan</string>

    <string name="hummidity">Hummidity</string>
    <string name="temperature">Temperature</string>
    <string name="hummidity_maximum">Hummidity maximum</string>
    <string name="hummidity_minimum">Hummidity minimum</string>
    <string name="temperature_maximum">Temperature maximum</string>
    <string name="temperature_minimum">Temperature minimum</string>
    <string name="soil_moisture">Soil moisture%</string>

    <string name="menu_plan_submenu">Plans</string>
    <string name="setup_heading">Setup</string>
    <string name="websocket_ip_address">WebSocket IP Address</string>
    <string name="fab_description">Create plan</string>
    <string name="fab_text">New plan</string>
    <string name="chipgroup_label">Schedule when to water</string>
    <string name="time_hint">Time</string>

    <string name="is_notification_channel_id" translatable="false">is_channel</string>
    <string name="is_notification_channel_name" translatable="false">Watering service</string>
    <string name="is_notification_channel_id2" translatable="false">service_summary_channel</string>
    <string name="is_notification_channel_name2" translatable="false">Service summary</string>

    <!-- Text resources for Binding adapters -->
    <string name="forecastTemperature">%1$d°C</string>
    <string name="sensorTemperature">%1$.2f°C</string>
    <string name="hummidityPercentage">%1$s</string>
    <string name="not_a_number">NaN</string>
    <string name="parameters_setup">Change parameters</string>
    <string name="change_city">Change city</string>
    <string name="change_access_ip">Change access IP</string>
    <string name="hummidity_and_temperature_parameters">Hummidity and temperature parameters</string>
    <string name="city_to_display_weather_from">City to display weather from</string>
    <string name="server_executor_ip">Server executor IP</string>
    <string name="change_server_ip_address">Change server IP Address</string>
    <string name="change_forecast_city">Change forecast city</string>

</resources>