<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="editVM"
            type="com.example.irrigationsystem.viewmodels.EditViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/edit_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="4dp"
            android:text="@string/edit_plan"
            android:textSize="@dimen/heading1"
            app:layout_constraintEnd_toStartOf="@+id/edit_plan_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/edit_plan_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:text="@{editVM.activePlan.name}"
            android:textSize="@dimen/heading1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/edit_heading"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Plan 1" />

        <TextView
            android:id="@+id/rv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/scheduled_days"
            android:textSize="@dimen/subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_plan_name" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_label" />


        <TextView
            android:id="@+id/scheduled_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/scheduled_time"
            android:textSize="@dimen/subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

        <TextView
            android:id="@+id/initial_scheduled_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/subtitle1"
            app:TimeSetter="@{editVM.activePlan.wateringTimeNow}"
            app:layout_constraintEnd_toEndOf="@+id/scheduled_time_label"
            app:layout_constraintStart_toStartOf="@+id/scheduled_time_label"
            app:layout_constraintTop_toBottomOf="@+id/scheduled_time_label"
            tools:text="12:12" />


        <TextView
            android:id="@+id/edit_subheading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/input_data"
            android:textSize="@dimen/heading2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/initial_scheduled_time" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/plan_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_subheading">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/edit_chipGroup_label"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="32dp"
            android:text="@string/chipgroup_label"
            android:textSize="@dimen/subtitle1"
            app:layout_constraintStart_toStartOf="@+id/edit_chipGroup"
            app:layout_constraintTop_toBottomOf="@+id/edit_input_layout" />


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/edit_chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.407"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_chipGroup_label">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_e1"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/monday_label" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_e2"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/tuesday_label" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_e3"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/wednesday_label" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_e4"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/thursday_label" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_e5"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/friday_label" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_e6"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/saturday_label" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_e7"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/sunday_label" />

        </com.google.android.material.chip.ChipGroup>

        <EditText
            android:id="@+id/edit_timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/time_hint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:longClickable="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_chipGroup" />

        <TextView
            android:id="@+id/edit_durationRadioGroupLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@id/edit_timeText"
            app:layout_constraintTop_toBottomOf="@id/edit_timeText"
            android:text="Watering duration"
            />

        <RadioGroup
            android:id="@+id/edit_wateringDurationGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/edit_durationRadioGroupLabel"
            app:layout_constraintTop_toBottomOf="@+id/edit_durationRadioGroupLabel">

            <RadioButton
                android:id="@+id/edit_wateringDuration1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="2 seconds" />

            <RadioButton
                android:id="@+id/edit_wateringDuration2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="5 seconds" />

            <RadioButton
                android:id="@+id/edit_wateringDuration3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="10 seconds" />
        </RadioGroup>

        <Button
            android:id="@+id/edit_button_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/update"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_wateringDurationGroup" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>